# pg_diag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
content/: EXTENDING.md  ITEM_DEVELOPMENT_SPEC.md  README.md  field_reference.yaml  metrics.yaml  python.yaml  queries.yaml  report.yaml  scripts.yaml
content/catalog/: activity_locks.yaml  backend_os.yaml  database.yaml  dba_extra.yaml  indexes.yaml  metric_sources.yaml  object_workload.yaml  overview.yaml  replication.yaml  security.yaml  statements.yaml  storage_vacuum.yaml  wait_profile.yaml  wal_io_checkpoints.yaml
content/python/cluster/: pg_controldata.py
content/python/database/: database_volume.py
content/python/security/: _local_security_common.py  _pg_hba_common.py  backup_repository_permissions.py  core_dump_policy.py  disk_encryption_status.py  extension_directory_permissions.py  firewall_postgres_exposure.py  log_file_permissions.py  pg_hba_broad_network_ranges.py  pg_hba_file_permissions.py  pg_hba_generic_database_or_user.py  pg_hba_insecure_auth_methods.py  pg_hba_tls_enforcement.py  pgdata_permissions.py  postgres_binary_integrity.py  postgres_client_secret_files.py  postgres_config_file_permissions.py  postgres_cron_timer_scripts.py  postgres_env_secret_leaks.py  postgres_history_files.py  postgres_os_group_members.py  postgres_service_hardening.py  procfs_hardening.py  remote_superuser_access.py  role_password_hashes.py  sudoers_postgres_escalation.py  symlinks_in_sensitive_paths.py  tablespace_directory_permissions.py  tls_key_file_permissions.py  unix_socket_permissions.py  wal_archive_directory_permissions.py  world_writable_paths_in_pg_tree.py
content/queries/activity/: connection_pressure.sql  idle_in_transaction.sql  long_transactions.sql  session_states.sql  wait_events.sql
content/queries/backend/: activity.sql
content/queries/buffer_cache/: by_database.sql  dirty_and_pinned.sql  dirty_by_usage_count.sql  relation_kinds.sql  usage_count_distribution.sql  utilization.sql
content/queries/checkpoints/: bgwriter_pg11_pg16.sql  bgwriter_pg17_plus.sql  checkpointer_pg17.sql  checkpointer_pg18.sql
content/queries/cluster/: extensions.sql  pending_restart_settings.sql  settings.sql  stat_reset_times_pg14.sql  stat_reset_times_pg15.sql  stat_reset_times_pg16.sql  stat_reset_times_pg17_plus.sql
content/queries/database/: database_stats_pg11.sql  database_stats_pg12_pg13.sql  database_stats_pg14.sql  database_stats_pg15_plus.sql  database_stats_pg18.sql
content/queries/indexes/: duplicate_indexes.sql  foreign_keys_without_index.sql  invalid_indexes.sql  large_indexes.sql  redundant_indexes.sql  tables_without_pk_or_unique.sql  unused_indexes.sql
content/queries/io/: pg_stat_io_pg16_pg17.sql  pg_stat_io_pg18_plus.sql
content/queries/locks/: lock_modes.sql  lock_waits.sql
content/queries/metrics/: activity_sessions_by_state.sql  activity_wait_sample_profile.sql  bgwriter_delta_pg17_plus.sql  checkpointer_delta_pg14_pg16.sql  checkpointer_delta_pg17.sql  checkpointer_delta_pg18_plus.sql  database_backends.sql  database_block_access_rate.sql  database_deadlocks.sql  database_io_time_rate.sql  database_temp_bytes_rate.sql  database_temp_files_delta.sql  database_transaction_rate.sql  database_tuple_access_rate.sql  database_tuple_dml_rate.sql  database_workload_delta.sql  io_activity_delta_pg16_pg17.sql  io_read_write_rate_pg16_pg17.sql  io_read_write_rate_pg18_plus.sql  logical_decoding_slot_delta.sql  (+32 more)
docs/: access-best-practices.md  pg_play-integration.md
pg_diag/: __init__.py  _content_state.py  artifact.py  artifact_schema.py  cli.py  collection.py  content_loader.py  contracts.py  errors.py  host_access.py  local_process.py  metric_engine.py  one_shot.py  os_metrics.py  planner.py  presentation.py  runtime_config.py  sampler_runtime.py  security.py  snapshot.py  snapshots.py  sql_lint.py  ssh_transport.py  validator.py  versioning.py
pg_diag/content/: EXTENDING.md  ITEM_DEVELOPMENT_SPEC.md  README.md  field_reference.yaml  integrity.sha256  metrics.yaml  presentation.yaml  python.yaml  report.yaml  scripts.yaml
pg_diag/executors/: __init__.py  common.py  python.py  remote_disabled_shell.py  shell.py  sql.py
pg_diag/providers/: __init__.py  linux.py  linux_helpers.py
pg_diag/render/: __init__.py  html.py
src/pg_diag/: __init__.py  _content_state.py  artifact_schema.py  cli.py  collection.py  configuration_facts.py  content_loader.py  host_access.py  one_shot.py  orchestration.py  progress.py  runtime_config.py  snapshots.py  ssh_transport.py  validator.py
tests/: README.md  conftest.py
tests/browser/: test_echarts_report.py
tests/integration/: _run_pg_diag.py  test_docker_pgbench_one_shot.py  test_docker_pgbench_snapshot.py
tests/unit/: test_buffer_cache_executor.py  test_cli.py  test_configuration_facts.py  test_content_contract.py  test_content_integrity.py  test_core_engine.py  test_dependency_policy.py  test_local_process.py  test_local_security_common.py  test_metric_engine.py  test_os_metrics.py  test_public_output.py  test_python_executor.py  test_render.py  test_report_output_paths.py  test_sampler_runtime.py  test_shell_executor.py  test_sql_executor.py  test_ssh_transport.py
(+821 files in other folders)
