[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-diag"
version = "0.9.0"
description = "Declarative PostgreSQL diagnostic report utility"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT AND BSD-3-Clause AND LicenseRef-ApexCharts"
license-files = [
  "LICENSE",
  "pg_diag/render/vendor/*LICENSE*",
  "pg_diag/render/vendor/THIRD_PARTY_LICENSES.txt",
]
authors = [
  { name = "O2eg", email = "oleg.ispu@yandex.ru" },
]
keywords = ["postgresql", "diagnostics", "dba"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Database",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "PyYAML>=6.0",
  "asyncpg>=0.29",
  "asyncssh>=2.21,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "tomli>=2.0; python_version < '3.11'",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "tomli>=2.0; python_version < '3.11'",
]
browser = [
  "playwright>=1.45",
]
docker = [
  "docker>=7.1",
]

[project.scripts]
pg-diag = "pg_diag.cli:main"

[project.urls]
Homepage = "https://github.com/O2eg/pg_diag"
Repository = "https://github.com/O2eg/pg_diag"
Issues = "https://github.com/O2eg/pg_diag/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pg_diag*"]
namespaces = false

[tool.setuptools.package-data]
pg_diag = [
  "content/**/*",
  "render/templates/*.html",
  "render/vendor/*.css",
  "render/vendor/*.js",
  "render/vendor/*.txt",
]

[tool.setuptools.exclude-package-data]
pg_diag = [
  "content/**/__pycache__/*",
  "content/**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py310"
