[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-diag"
version = "0.10.4"
description = "PostgreSQL diagnostics with host metrics and portable JSON/HTML reports"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT AND BSD-3-Clause AND Apache-2.0"
license-files = [
  "LICENSE",
  "src/pg_diag/render/vendor/*LICENSE*",
  "src/pg_diag/render/vendor/*NOTICE*",
  "src/pg_diag/render/vendor/THIRD_PARTY_LICENSES.txt",
]
authors = [
  { name = "O2eg", email = "oleg.ispu@yandex.ru" },
]
keywords = ["postgresql", "diagnostics", "dba"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Database",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "PyYAML>=6.0,<7",
  "asyncpg>=0.29,<1",
  "asyncssh>=2.21,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4,<9",
  "tomli>=2.0; python_version < '3.11'",
]
dev = [
  "build>=1.2,<2",
  "pytest>=7.4,<9",
  "pytest-cov>=4.1,<8",
  "ruff>=0.5,<0.6",
  "tomli>=2.0; python_version < '3.11'",
  "twine>=6,<7",
]
browser = [
  "playwright>=1.45,<2",
]
docker = [
  "docker>=7.1,<8",
]

[project.scripts]
pg-diag = "pg_diag.cli:main"

[project.urls]
Homepage = "https://github.com/O2eg/pg_diag"
Repository = "https://github.com/O2eg/pg_diag"
Issues = "https://github.com/O2eg/pg_diag/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["pg_diag*"]
namespaces = false

[tool.setuptools.package-data]
pg_diag = [
  "content/**/*",
  "schema/*.json",
  "render/templates/*.html",
  "render/vendor/*.css",
  "render/vendor/*.js",
  "render/vendor/*.txt",
]

[tool.setuptools.exclude-package-data]
pg_diag = [
  "content/**/__pycache__/*",
  "content/**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"src/pg_diag/content/python/security/*.py" = ["F403", "F405"]
